# kstatusnotifieritem

./: .gitignore  .kde-ci.yml  CMakeLists.txt  KF6StatusNotifierItemConfig.cmake.in  README.md  metainfo.yaml
examples/: kstatusnotifieritem.py
poqm/ar/: kstatusnotifieritem6_qt.po
poqm/ast/: kstatusnotifieritem6_qt.po
poqm/bg/: kstatusnotifieritem6_qt.po
poqm/ca/: kstatusnotifieritem6_qt.po
poqm/ca@valencia/: kstatusnotifieritem6_qt.po
poqm/cs/: kstatusnotifieritem6_qt.po
poqm/de/: kstatusnotifieritem6_qt.po
poqm/en_GB/: kstatusnotifieritem6_qt.po
poqm/eo/: kstatusnotifieritem6_qt.po
poqm/es/: kstatusnotifieritem6_qt.po
poqm/eu/: kstatusnotifieritem6_qt.po
poqm/fi/: kstatusnotifieritem6_qt.po
poqm/fr/: kstatusnotifieritem6_qt.po
poqm/ga/: kstatusnotifieritem6_qt.po
poqm/gl/: kstatusnotifieritem6_qt.po
poqm/he/: kstatusnotifieritem6_qt.po
poqm/hi/: kstatusnotifieritem6_qt.po
poqm/hu/: kstatusnotifieritem6_qt.po
poqm/ia/: kstatusnotifieritem6_qt.po
poqm/is/: kstatusnotifieritem6_qt.po
poqm/it/: kstatusnotifieritem6_qt.po
poqm/ja/: kstatusnotifieritem6_qt.po
poqm/ka/: kstatusnotifieritem6_qt.po
poqm/ko/: kstatusnotifieritem6_qt.po
poqm/lt/: kstatusnotifieritem6_qt.po
poqm/lv/: kstatusnotifieritem6_qt.po
python/: CMakeLists.txt  bindings.h  bindings.xml
src/: CMakeLists.txt  config-kstatusnotifieritem.h.cmake  kstatusnotifieritem-index.qdoc  kstatusnotifieritem.cpp  kstatusnotifieritem.h  kstatusnotifieritem.qdoc  kstatusnotifieritem.qdocconf  kstatusnotifieritemdbus_p.cpp  kstatusnotifieritemprivate_p.h
(+18 files in other folders)
